--- a/Day 5/Lists.ipynb
+++ b/Day 5/Lists.ipynb
@@ -409,6 +409,161 @@
     "ages.sort(reverse=True)\n",
     "print(ages) #  [26, 25, 25, 24, 24, 24, 22, 19]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "QUESTIONS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'orange', 'grape', 'cherry']\n",
+      "Length of my_list: 5\n",
+      "First item: apple\n",
+      "Middle item: orange\n",
+      "Last item: cherry\n",
+      "['Nubuhoro Divine', 20, 1.65, 'Single', 'Gihundwe, Rwanda']\n",
+      "IT Companies: ['Facebook', 'Google', 'Microsoft', 'Apple', 'IBM', 'Oracle', 'Amazon']\n",
+      "Number of IT companies: 7\n",
+      "First company: Facebook\n",
+      "Middle company: Apple\n",
+      "Last company: Amazon\n",
+      "Modified list: ['Facebook', 'Google', 'Meta', 'Apple', 'IBM', 'Oracle', 'Amazon']\n",
+      "List after adding a company: ['Facebook', 'Google', 'Meta', 'Apple', 'IBM', 'Oracle', 'Amazon', 'Tesla']\n",
+      "List after inserting a company: ['Facebook', 'Google', 'Meta', 'Apple', 'Adobe', 'IBM', 'Oracle', 'Amazon', 'Tesla']\n",
+      "List after changing a company name to uppercase: ['Facebook', 'GOOGLE', 'Meta', 'Apple', 'Adobe', 'IBM', 'Oracle', 'Amazon', 'Tesla']\n",
+      "Joined companies: Facebook#; GOOGLE#; Meta#; Apple#; Adobe#; IBM#; Oracle#; Amazon#; Tesla\n",
+      "Does Amazon exist in the list? True\n",
+      "Sorted list: ['Adobe', 'Amazon', 'Apple', 'Facebook', 'GOOGLE', 'IBM', 'Meta', 'Oracle', 'Tesla']\n",
+      "Reversed list: ['Tesla', 'Oracle', 'Meta', 'IBM', 'GOOGLE', 'Facebook', 'Apple', 'Amazon', 'Adobe']\n",
+      "First 3 companies: ['Tesla', 'Oracle', 'Meta']\n",
+      "Last 3 companies: ['Apple', 'Amazon', 'Adobe']\n",
+      "Middle company: GOOGLE\n",
+      "List after removing the first company: ['Oracle', 'Meta', 'IBM', 'GOOGLE', 'Facebook', 'Apple', 'Amazon', 'Adobe']\n",
+      "List after removing the middle company: ['Oracle', 'Meta', 'IBM', 'GOOGLE', 'Apple', 'Amazon', 'Adobe']\n",
+      "List after removing the last company: ['Oracle', 'Meta', 'IBM', 'GOOGLE', 'Apple', 'Amazon']\n",
+      "List after removing all companies: []\n",
+      "Joined lists: ['Python', 'Java', 'C++', 'HTML', 'CSS', 'JavaScript']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Declare an empty list\n",
+    "empty_list = []\n",
+    "\n",
+    "# Declare a list with more than 5 items\n",
+    "my_list = ['apple', 'banana', 'orange', 'grape', 'cherry']\n",
+    "print(my_list)\n",
+    "\n",
+    "# Find the length of the list\n",
+    "print(\"Length of my_list:\", len(my_list))\n",
+    "\n",
+    "# Get the first, middle, and last items of the list\n",
+    "first_item = my_list[0]\n",
+    "middle_item = my_list[len(my_list) // 2]\n",
+    "last_item = my_list[-1]\n",
+    "print(\"First item:\", first_item)\n",
+    "print(\"Middle item:\", middle_item)\n",
+    "print(\"Last item:\", last_item)\n",
+    "\n",
+    "# Declare a list with mixed data types\n",
+    "mixed_data_types = [\"Nubuhoro Divine\", 20, 1.65, \"Single\", \"Gihundwe, Rwanda\"]\n",
+    "print(mixed_data_types)\n",
+    "\n",
+    "# Declare a list of IT companies\n",
+    "it_companies = [\"Facebook\", \"Google\", \"Microsoft\", \"Apple\", \"IBM\", \"Oracle\", \"Amazon\"]\n",
+    "\n",
+    "# Print the IT companies list\n",
+    "print(\"IT Companies:\", it_companies)\n",
+    "\n",
+    "# Print the number of IT companies\n",
+    "print(\"Number of IT companies:\", len(it_companies))\n",
+    "\n",
+    "# Print the first, middle, and last company\n",
+    "print(\"First company:\", it_companies[0])\n",
+    "print(\"Middle company:\", it_companies[len(it_companies) // 2])\n",
+    "print(\"Last company:\", it_companies[-1])\n",
+    "\n",
+    "# Modify one of the companies\n",
+    "it_companies[2] = \"Meta\"\n",
+    "print(\"Modified list:\", it_companies)\n",
+    "\n",
+    "# Add an IT company\n",
+    "it_companies.append(\"Tesla\")\n",
+    "print(\"List after adding a company:\", it_companies)\n",
+    "\n",
+    "# Insert an IT company in the middle\n",
+    "it_companies.insert(len(it_companies) // 2, \"Adobe\")\n",
+    "print(\"List after inserting a company:\", it_companies)\n",
+    "\n",
+    "# Change one of the company names to uppercase (excluding IBM)\n",
+    "it_companies[1] = it_companies[1].upper()\n",
+    "print(\"List after changing a company name to uppercase:\", it_companies)\n",
+    "\n",
+    "# Join the IT companies with a string '#; '\n",
+    "joined_companies = '#; '.join(it_companies)\n",
+    "print(\"Joined companies:\", joined_companies)\n",
+    "\n",
+    "# Check if a company exists in the list\n",
+    "company_to_check = \"Amazon\"\n",
+    "print(f\"Does {company_to_check} exist in the list?\", company_to_check in it_companies)\n",
+    "\n",
+    "# Sort the list\n",
+    "it_companies.sort()\n",
+    "print(\"Sorted list:\", it_companies)\n",
+    "\n",
+    "# Reverse the list in descending order\n",
+    "it_companies.reverse()\n",
+    "print(\"Reversed list:\", it_companies)\n",
+    "\n",
+    "# Slice out the first 3 companies\n",
+    "print(\"First 3 companies:\", it_companies[:3])\n",
+    "\n",
+    "# Slice out the last 3 companies\n",
+    "print(\"Last 3 companies:\", it_companies[-3:])\n",
+    "\n",
+    "# Slice out the middle company or companies\n",
+    "middle_index = len(it_companies) // 2\n",
+    "if len(it_companies) % 2 == 0:\n",
+    "    print(\"Middle companies:\", it_companies[middle_index-1:middle_index+1])\n",
+    "else:\n",
+    "    print(\"Middle company:\", it_companies[middle_index])\n",
+    "\n",
+    "# Remove the first IT company\n",
+    "del it_companies[0]\n",
+    "print(\"List after removing the first company:\", it_companies)\n",
+    "\n",
+    "# Remove the middle IT company or companies\n",
+    "middle_index = len(it_companies) // 2\n",
+    "del it_companies[middle_index]\n",
+    "print(\"List after removing the middle company:\", it_companies)\n",
+    "\n",
+    "# Remove the last IT company\n",
+    "it_companies.pop()\n",
+    "print(\"List after removing the last company:\", it_companies)\n",
+    "\n",
+    "# Remove all IT companies\n",
+    "it_companies.clear()\n",
+    "print(\"List after removing all companies:\", it_companies)\n",
+    "\n",
+    "# Destroy the IT companies list\n",
+    "del it_companies\n",
+    "\n",
+    "# Join the following lists\n",
+    "list1 = [\"Python\", \"Java\", \"C++\"]\n",
+    "list2 = [\"HTML\", \"CSS\", \"JavaScript\"]\n",
+    "joined_lists = list1 + list2\n",
+    "print(\"Joined lists:\", joined_lists)\n"
+   ]
   }
  ],
  "metadata": {
