--- a/day 8/Dictionaries.ipynb
+++ b/day 8/Dictionaries.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog dictionary: {'name': 'Buddy', 'color': 'Brown', 'breed': 'Golden Retriever', 'legs': 4, 'age': 3}\n",
+      "Length of student dictionary: 9\n",
+      "Skills: ['Python', 'Flutter']\n",
+      "Data type of skills: <class 'list'>\n",
+      "Updated skills: ['Python', 'Flutter', 'HTML', 'CSS']\n",
+      "Dictionary keys: ['first_name', 'last_name', 'gender', 'age', 'marital_status', 'skills', 'country', 'city', 'address']\n",
+      "Dictionary values: ['Nubuhoro', 'Divine', 'Female', 22, 'Single', ['Python', 'Flutter', 'HTML', 'CSS'], 'Rwanda', 'Kigali', '123 Street, Gihundwe']\n",
+      "Student dictionary as list of tuples: [('first_name', 'Nubuhoro'), ('last_name', 'Divine'), ('gender', 'Female'), ('age', 22), ('marital_status', 'Single'), ('skills', ['Python', 'Flutter', 'HTML', 'CSS']), ('country', 'Rwanda'), ('city', 'Kigali'), ('address', '123 Street, Gihundwe')]\n",
+      "Student dictionary after deletion: {'first_name': 'Nubuhoro', 'last_name': 'Divine', 'gender': 'Female', 'age': 22, 'skills': ['Python', 'Flutter', 'HTML', 'CSS'], 'country': 'Rwanda', 'city': 'Kigali', 'address': '123 Street, Gihundwe'}\n",
+      "Dog dictionary deleted.\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Create an empty dictionary called dog\n",
     "dog = {}\n",
@@ -66,8 +83,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
